Prepare for deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https//ReemaSherin.github.io/FitnessTracker",
+  "homepage": "https//Bodepudi-PoojaSri.github.io/FitnessTracker",
   "name": "basics",
   "private": true,
   "version": "0.0.0",
